--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@pnp/graph": "^3.20.1",
     "@pnp/sp": "^3.20.1",
     "@pnp/spfx-controls-react": "3.16.0",
+    "@pnp/spfx-property-controls": "3.15.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tslib": "2.3.1"
